sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:18: error: not found: value getNombreVaeurs
  }while(posGnome < getNombreVaeurs()-1) 
                    ^