sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var posGnome = 0
  
  do {
    if (plusPetit(posGnome,posGnome+1)){
      posGnome += 1
    }else{
      // On suppose qu'il n'y a pas de cas d egalite
      echange(posGnome,posGnome+1)
      if ( posGnome >=1){
        posGnome -= 1
      }else{
        posGnome +=1
      }
    }
    
  }while(posGnome < getNombreVaeurs()-1) 
}